--- a/app/price.html
+++ b/app/price.html
@@ -18,7 +18,9 @@
 <meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- InstanceBeginEditable name="doctitle" --><title>Цены</title><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>Цены</title>
+<!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -32,7 +34,8 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -106,12 +109,152 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- InstanceBeginEditable name="main" -->		<!-- =breadcrumbs -->		<div class="breadcrumbs">			<ul class="B_crumbBox">				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>				<li class="B_lastCrumb"><span class="B_currentCrumb">Цены</span></li>			</ul>		</div>		<!-- =/breadcrumbs -->		<main class="text">			<h1 class="title">Стоимость работ по электрике</h1>			<p>Наши электрики выполняют самые разные работы. Многообразие видов работ и условий их исполнения непросто уместить на небольшой странице сайта. Поэтому здесь мы размещаем цены на самые запрашиваемые виды работ.</p>			<p>Для уточнения стоимости услуг электрика позвоните нам или заполните форму обратной связи внизу страницы: укажите Ваши контакты, город, куда нужно будет выехать, и опишите, что нужно будет делать.</p><br>			<h2 style="color: #307a56">ПРАЙС-ЛИСТ “ЩЕЛКОВОЭЛЕКТРИК”</h2>			<table cellpadding="0" cellspacing="0" width="100%">				<tr>					<td width="800"><em><a href="#" title="">Замена / ремонт розетки / выключателя</a></em></td>					<td><em>от 350 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Установка розетки / выключателя на новом месте</a></em></td>					<td><em>от 500 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Монтаж люстры на крючок</a></em></td>					<td><em>от 500 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Монтаж люстры с потолочным креплением</a></em></td>					<td><em>от 800 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Замена веревочного выключателя на кнопочный</a></em></td>					<td><em>от 1.500 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Установка однополюсного автомата</a></em></td>					<td><em>от 500 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Поиск и устранение неисправности (обрыв / короткое замыкание) в стандартной электропроводке</a></em></td>					<td><em>от 1.500 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Поиск и устранение неисправности (обрыв / короткое замыкание) в НЕстандартной электропроводке</a></em></td>					<td><em>от 3.000 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Установка УЗО</a></em></td>					<td><em>от 1.000 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Прокладка провода в кабель-канале</a></em></td>					<td><em>от 150 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Монтаж электрического щитка внешнего</a></em></td>					<td><em>от 500 руб.</em></td>				</tr>				<tr>					<td><em><a href="#" title="">Монтаж электрического щитка внутреннего (утапливание в стену путем штробления)</a></em></td>					<td><em>от 2.000 руб.</em></td>				</tr>			</table>			<br>			<h2 style="color: #307a56">МОНТАЖ РОЗЕТОК И ВЫКЛЮЧАТЕЛЕЙ</h2>			<table cellpadding="0" cellspacing="0" width="100%">				<tr>					<td width="400"><em><a href="#">накладной выключатель</a></em></td>					<td><em>от 350 руб.</em></td>				</tr>				<tr>					<td><em><a href="#">проходной выключатель (внутренний)</a></em></td>					<td><em>от 400 руб.</em></td>				</tr>				<tr>					<td><em><a href="#">проходной выключатель (накладной)</a></em></td>					<td><em>от 500 руб.</em></td>				</tr>				<tr>					<td><em><a href="#">внутренняя розетка</a></em></td>					<td><em>от 250 руб.</em></td>				</tr>				<tr>					<td><em><a href="#">накладная розетка</a></em></td>					<td><em>от 350 руб.</em></td>				</tr>				<tr>					<td><em><a href="#">внутренний выключатель</a></em></td>					<td><em>от 250 руб.</em></td>				</tr>				<tr>					<td><em><a href="#">коммутация распаечной коробки</a></em></td>					<td><em>от 450 руб.</em></td>				</tr>			</table>			<br>			<h2 style="color: #307a56">ПРОКЛАДКА КАБЕЛЯ</h2>			<table cellpadding="0" cellspacing="0" width="100%">				<tr>					<td width="400"><a href="#">укладка кабеля на скобках</a></td>					<td>от 70 руб.</td>				</tr>				<tr>					<td><a href="#">укладка кабеля в кабель-канале</a></td>					<td>от 50 руб.</td>				</tr>				<tr>					<td><a href="#">монтаж кабеля в гофре</a></td>					<td>от 100 руб.</td>				</tr>				<tr>					<td><a href="#">укладка кабеля в штробе</a></td>					<td>от 70 руб.</td>				</tr>				<tr>					<td><a href="#">укладка кабеля в штробе с замазкой</a></td>					<td>от 150 руб.</td>				</tr>				<tr>					<td><a href="#">монтаж кабель-канала</a></td>					<td>от 80 руб.</td>				</tr>				<tr>					<td><a href="#">монтаж кабель-канала на потолке</a></td>					<td>от 150 руб.</td>				</tr>			</table>		</main><!-- InstanceEndEditable -->			
+<!-- InstanceBeginEditable name="main" -->
+		<!-- =breadcrumbs -->
+		<div class="breadcrumbs">
+			<ul class="B_crumbBox">
+				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
+				<li class="B_lastCrumb"><span class="B_currentCrumb">Цены</span></li>
+			</ul>
+		</div>
+		<!-- =/breadcrumbs -->
+		<main class="text">
+			<h1 class="title">Стоимость работ по электрике</h1>
+			<p>Наши электрики выполняют самые разные работы. Многообразие видов работ и условий их исполнения непросто уместить на небольшой странице сайта. Поэтому здесь мы размещаем цены на самые запрашиваемые виды работ.</p>
+			<p>Для уточнения стоимости услуг электрика позвоните нам или заполните форму обратной связи внизу страницы: укажите Ваши контакты, город, куда нужно будет выехать, и опишите, что нужно будет делать.</p>
+<br>
+			<h2 style="color: #307a56">ПРАЙС-ЛИСТ “ЩЕЛКОВОЭЛЕКТРИК”</h2>
+			<div class="table-responsive">
+				<table cellpadding="0" cellspacing="0" width="100%">
+					<tr>
+						<td width="800"><em><a href="#" title="">Замена / ремонт розетки / выключателя</a></em></td>
+						<td><em>от 350 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Установка розетки / выключателя на новом месте</a></em></td>
+						<td><em>от 500 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Монтаж люстры на крючок</a></em></td>
+						<td><em>от 500 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Монтаж люстры с потолочным креплением</a></em></td>
+						<td><em>от 800 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Замена веревочного выключателя на кнопочный</a></em></td>
+						<td><em>от 1.500 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Установка однополюсного автомата</a></em></td>
+						<td><em>от 500 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Поиск и устранение неисправности (обрыв / короткое замыкание) в стандартной электропроводке</a></em></td>
+						<td><em>от 1.500 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Поиск и устранение неисправности (обрыв / короткое замыкание) в НЕстандартной электропроводке</a></em></td>
+						<td><em>от 3.000 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Установка УЗО</a></em></td>
+						<td><em>от 1.000 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Прокладка провода в кабель-канале</a></em></td>
+						<td><em>от 150 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Монтаж электрического щитка внешнего</a></em></td>
+						<td><em>от 500 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#" title="">Монтаж электрического щитка внутреннего (утапливание в стену путем штробления)</a></em></td>
+						<td><em>от 2.000 руб.</em></td>
+					</tr>
+				</table>
+			</div>
+			<br>
+			<h2 style="color: #307a56">МОНТАЖ РОЗЕТОК И ВЫКЛЮЧАТЕЛЕЙ</h2>
+
+			<div class="table-responsive">
+				<table cellpadding="0" cellspacing="0" width="100%">
+					<tr>
+						<td width="400"><em><a href="#">накладной выключатель</a></em></td>
+						<td><em>от 350 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#">проходной выключатель (внутренний)</a></em></td>
+						<td><em>от 400 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#">проходной выключатель (накладной)</a></em></td>
+						<td><em>от 500 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#">внутренняя розетка</a></em></td>
+						<td><em>от 250 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#">накладная розетка</a></em></td>
+						<td><em>от 350 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#">внутренний выключатель</a></em></td>
+						<td><em>от 250 руб.</em></td>
+					</tr>
+					<tr>
+						<td><em><a href="#">коммутация распаечной коробки</a></em></td>
+						<td><em>от 450 руб.</em></td>
+					</tr>
+				</table>
+			</div>
+
+			<br>
+			<h2 style="color: #307a56">ПРОКЛАДКА КАБЕЛЯ</h2>
+			
+			<div class="table-responsive">
+				<table cellpadding="0" cellspacing="0" width="100%">
+					<tr>
+						<td width="400"><a href="#">укладка кабеля на скобках</a></td>
+						<td>от 70 руб.</td>
+					</tr>
+					<tr>
+						<td><a href="#">укладка кабеля в кабель-канале</a></td>
+						<td>от 50 руб.</td>
+					</tr>
+					<tr>
+						<td><a href="#">монтаж кабеля в гофре</a></td>
+						<td>от 100 руб.</td>
+					</tr>
+					<tr>
+						<td><a href="#">укладка кабеля в штробе</a></td>
+						<td>от 70 руб.</td>
+					</tr>
+					<tr>
+						<td><a href="#">укладка кабеля в штробе с замазкой</a></td>
+						<td>от 150 руб.</td>
+					</tr>
+					<tr>
+						<td><a href="#">монтаж кабель-канала</a></td>
+						<td>от 80 руб.</td>
+					</tr>
+					<tr>
+						<td><a href="#">монтаж кабель-канала на потолке</a></td>
+						<td>от 150 руб.</td>
+					</tr>
+				</table>
+			</div>
+		</main>
+<!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
 
-<!-- InstanceBeginEditable name="EditRegion5" --><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion5" -->
+<!-- InstanceEndEditable -->
 
 
 <!-- =footer -->
@@ -236,7 +379,21 @@
 <!-- =/modal writeus -->
 
 
-<!-- InstanceBeginEditable name="EditRegion4" --><!-- =modal infomodal --><div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">	<div class="modal-dialog" role="document">		<div class="container">			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>			<div class="modal__content">				<h2 class="title"></h2>				<div class="modal__text"></div>			</div>		</div>	</div></div><!-- =/modal infomodal --><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" -->
+<!-- =modal infomodal -->
+<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="container">
+			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
+			<div class="modal__content">
+				<h2 class="title"></h2>
+				<div class="modal__text"></div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- =/modal infomodal -->
+<!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
@@ -252,6 +409,7 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 
-<!-- InstanceBeginEditable name="EditRegion6" --><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion6" -->
+<!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
