--- a/app/homepage.html
+++ b/app/homepage.html
@@ -23,15 +23,15 @@
 <link rel="stylesheet" href="/template/css/styles.min.css">
 <script src="/template/js/libs.min.js"></script>
 <script src="/template/js/jquery.bxslider.min.js"></script>
-<!--[if !IE]>
+
+<!--[if !IE]><!-->
 <script>if(/*@cc_on!@*/false){document.documentElement.className+=' ie10';}</script>
-<![endif]-->
+<!--<![endif]-->
+
 <!--[if IE]>
 	<link href="/template/css/styles-ie.css" rel="stylesheet" type="text/css" />
 <![endif]-->
-<!--[if lt IE 9]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+
 </head>
 <body>
 <!-- =header -->
@@ -647,9 +647,8 @@
 <script src="/outdatedbrowser/outdatedbrowser.min.js"></script>
 <script src="/template/js/owl.carousel.min.js"></script>
 <link rel="stylesheet" property="stylesheet" href="template/css/owl.carousel.css">
-<script src="https://ajax.microsoft.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
-<script>window.jQuery || document.write('<script src="template/js/jquery.validate.min.js"><\/script>')</script>
 <script src="/template/js/engine.js"></script>
+
 <script src="https://api-maps.yandex.ru/2.1.26/?lang=ru_RU"></script>
 <script>
 var map;
@@ -680,5 +679,6 @@ ymaps.ready(function () {
 	});
 })
 </script>
+
 </body>
 </html>
